--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -1,4 +1,4 @@
-<div class="ourLeagues grey lighten-2">
+<div class="ourLeagues <%= home ? ' grey lighten-2' : '' %>">
     <div class="container">
         <h3 class="center-align">Our Leagues</h3>
         <div class="row">
