--- a/views/includes/homepage_sections/ourProgram.ejs
+++ b/views/includes/homepage_sections/ourProgram.ejs
@@ -1,8 +1,12 @@
 <div class="ourProgram">
+    
         <% if (home) { %>
             <h3 class="center-align">Our Program</h3>
         <% } else { %> 
-            <h5 class="green-text text-darken-1" style="font-weight: bold;">Our Program</h5>
+            <div class="container">
+                <h5 class="green-text text-darken-1" style="font-weight: bold;">Our Program</h5>
+
+            </div>
         <% } %>
     <div style="padding: 0 10%;">
         <div class="row">
