--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,5 +1,27 @@
+/* VARIABLES */
+
+:root {
+    --primary-green: #2C6919;
+    --primary-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/*************/
+
+/* UNIVERSAL CLASSES */
+
+.bold {
+    font-weight: bold;
+}
+
+.container.big {
+    width: 90%;
+    padding: 50px;
+}
+
+/*********************/
+
 body {
-    font-family: -apple-system, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var(--primary-font);
 }
 
 html, body {
@@ -16,10 +38,6 @@ nav {
 
 h5 {
     margin: 0 !important;
-}
-
-.bold {
-    font-weight: bold;
 }
 
 img.logo {
