--- a/views/includes/homepage_sections/whatWeDo.ejs
+++ b/views/includes/homepage_sections/whatWeDo.ejs
@@ -1,5 +1,5 @@
 <div class="whatWeDo">
-    <div class="container">
+    <div class="container big">
         <h3 class="center-align">WHAT WE DO</h3>
         <div class="row">
             <%- include('../minis/whatWeDoCard', {
