--- a/views/includes/joinus_sections/types.ejs
+++ b/views/includes/joinus_sections/types.ejs
@@ -1,5 +1,5 @@
 <div class="types">
-    <div class="container">
+    <div class="container big">
         <table class="typesTable" style="table-layout: fixed;"> 
             <tr>
                 <td class="grey lighten-1">Club</td>
@@ -13,7 +13,7 @@
                     <img src="/images/icons/club.png">
                 </td>
                 <td>
-                    <img src="/images/icons/rec.png">
+                    <img src="/images/icons/rec.png" class="rec">
                 </td>
                 <td>
                     <img src="/images/icons/team.png">
@@ -39,6 +39,50 @@
                     <p>Meet new friends, connect with a group, join the program!</p>
                 </td>
                 <td class="grey lighten-4">
+                    <p>Get certified, choose your own schedule, get paid!</p>
+                </td>
+            </tr>
+        </table>
+
+        <table class="typesTableMobile">
+            <tr>
+                <td class="grey lighten-1">Club</td>
+                <td><img src="/images/icons/club.png"></td>
+            </tr>
+            <tr >
+                <td colspan="2" class="grey lighten-4">
+                    <p>Add value and diversity to all your U7 and U8 programming!</p>
+                </td>
+            <tr>
+                <td class="grey lighten-1">Town/Rec Group</td>
+                <td><img src="/images/icons/rec.png"></td>
+            </tr>
+            <tr >
+                <td colspan="2" class="grey lighten-4">
+                    <p>Provide supplemental development oppurtunities for your U7 and U8 players!</p>
+                </td>
+            <tr>
+                <td class="grey lighten-1">Team</td>
+                <td><img src="/images/icons/team.png"></td>
+            </tr>
+            <tr >
+                <td colspan="2" class="grey lighten-4">
+                    <p>Enhance the U7 and U8 training</p>
+                </td>
+            <tr>
+                <td class="grey lighten-1">Player</td>
+                <td><img src="/images/icons/player.png"></td>
+            </tr>
+            <tr >
+                <td colspan="2" class="grey lighten-4">
+                    <p>Meet new friends, connect with a group, join the program!</p>
+                </td>
+            <tr>
+                <td class="grey lighten-1">Referee</td>
+                <td><img src="/images/icons/referee.png"></td>
+            </tr>
+            <tr >
+                <td colspan="2" class="grey lighten-4">
                     <p>Get certified, choose your own schedule, get paid!</p>
                 </td>
             </tr>
