small design changes with Z

--- a/views/includes/aboutus_sections/ourStory.ejs
+++ b/views/includes/aboutus_sections/ourStory.ejs
@@ -1,6 +1,6 @@
 <div class="ourStory">
     <div class="container">
-        <h5 class="green-text text-darken-1" style="font-weight: bold;">Our Story</h5>
+        <h4 class="primaryGreen bold">Our Story</h4>
         <p>
             <%- include('../content/our_story'); %> 
         </p>
