--- a/views/includes/aboutus_sections/ourTeam.ejs
+++ b/views/includes/aboutus_sections/ourTeam.ejs
@@ -1,6 +1,6 @@
 <div class="ourTeam">
     <div class="container">
-        <h5 class="green-text text-darken-1" style="font-weight: bold;">Our Team</h5>
+        <h4 class="primaryGreen bold">Our Team</h4>
         <div class="row">
             <div class="person col s12 l4">
                 <img class="leaguesLogo" src="/images/Headshots/steve.png">
