--- a/views/includes/aboutus_sections/palla.ejs
+++ b/views/includes/aboutus_sections/palla.ejs
@@ -1,6 +1,6 @@
 <div class="palla">
     <div class="container">
-        <h5 class="green-text text-darken-1" style="font-weight: bold;">Palla Sportswear</h5>
+        <h4 class="primaryGreen bold">Palla Sportswear</h4>
         <div class="image">
             <img class="pallalogo" src="/images/icons/palla.png">
         </div>
