--- a/views/includes/aboutus_sections/playerCard.ejs
+++ b/views/includes/aboutus_sections/playerCard.ejs
@@ -1,8 +1,6 @@
 <div class="playerCards">
     <div class="container">
-        <h5 class="green-text text-darken-1" style="font-weight: bold;">Player Cards</h5>
-    </div>
-    <div class="container big">
+        <h4 class="primaryGreen bold">Player Cards</h4>
         <div class="row">
             <div class="col s12 l4 cardContainer">
                 <div class="image">
