--- a/views/includes/aboutus_sections/socialGood.ejs
+++ b/views/includes/aboutus_sections/socialGood.ejs
@@ -1,6 +1,6 @@
 <div class="socialGood">
     <div class="container">
-        <h5 class="green-text text-darken-1" style="font-weight: bold;">Social Good</h5>
+        <h4 class="primaryGreen bold">Social Good</h4>
         <p>
             <%- include('../content/social_good'); %>
         </p>
