--- a/views/includes/aboutus_sections/technology.ejs
+++ b/views/includes/aboutus_sections/technology.ejs
@@ -1,6 +1,6 @@
 <div class="technology">
     <div class="container">
-        <h5 class="green-text text-darken-1" style="font-weight: bold;">Technology</h5>
+        <h4 class="primaryGreen bold">Technology</h4>
         <div class="image">
             <img class="tapinlogo" src="/images/leagues/tapin.png">
         </div>
