--- a/views/includes/franchise_sections/activeFranchises.ejs
+++ b/views/includes/franchise_sections/activeFranchises.ejs
@@ -1,6 +1,6 @@
 <div class="activeFranchises">
     <div class="container">
-        <h4 class="bold">Active Franchises</h4>
+        <h4 class="bold typicalTitle">Active Franchises</h4>
     </div>
     <div class="mapContainer">
         <div class="map">
