--- a/views/includes/homepage_sections/news.ejs
+++ b/views/includes/homepage_sections/news.ejs
@@ -1,6 +1,6 @@
 <div class="news">
     <div class="container" style="width: 100%;">
-        <h3 class="center-align">News</h3>
+        <h3 class="center-align typicalTitle">News</h3>
         <div class="row">
             <a href="/news#story1">
                 <div class="col s12 m6 l4">
