--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -1,22 +1,22 @@
-<div class="ourLeagues <%= home ? ' grey lighten-2' : '' %>">
+<div class="ourLeagues <%= home ? ' grey lighten-4' : '' %>">
     <div class="container">
-        <h3 class="center-align">Our Leagues</h3>
+        <h3 class="center-align typicalTitle">Our Leagues</h3>
         <div class="row">
             <div class="league col s12 m6 l3">
                 <img class="leaguesLogo" src="/images/leagues/logo-draft.png">
-                <h5>GDL MA</h5>
+                <h5 class="bold">GDL MA</h5>
             </div>
             <div class="league col s12 m6 l3">
                 <img class="leaguesLogo" src="/images/leagues/red.png">
-                <h5 class="red-text">GDL RI</h5>
+                <h5 class="red-text bold">GDL RI</h5>
             </div>
             <div class="league col s12 m6 l3">
                 <img class="leaguesLogo" src="/images/leagues/orange.png">
-                <h5 class="orange-text">GDL NH</h5>
+                <h5 class="orange-text bold">GDL NH</h5>
             </div>
             <div class="league col s12 m6 l3">
                 <img class="leaguesLogo" src="/images/leagues/purple.png">
-                <h5 class="purple-text">GDL ME</h5>
+                <h5 class="purple-text bold">GDL ME</h5>
             </div>
         </div>
     </div>
