--- a/views/includes/homepage_sections/ourProgram.ejs
+++ b/views/includes/homepage_sections/ourProgram.ejs
@@ -1,11 +1,10 @@
 <div class="ourProgram">
     
         <% if (home) { %>
-            <h3 class="center-align">Our Program</h3>
+            <h3 class="center-align typicalTitle">Our Program</h3>
         <% } else { %> 
             <div class="container">
-                <h5 class="green-text text-darken-1" style="font-weight: bold;">Our Program</h5>
-
+                <h4 class="primaryGreen bold">Our Program</h4>
             </div>
         <% } %>
     <div style="padding: 0 10%;">
