--- a/views/includes/homepage_sections/testimonials.ejs
+++ b/views/includes/homepage_sections/testimonials.ejs
@@ -1,6 +1,6 @@
 <div class="testimonials grey lighten-2">
     <div class="container">
-        <h3 class="center-align">Testimonials</h3> 
+        <h3 class="center-align typicalTitle">What They Said</h3> 
         <div class="row carousel-wrapper">
             <div class="carousel carousel-slider center">
                 <div class="carousel-item white" href="#one!">
