--- a/views/includes/homepage_sections/whatWeDo.ejs
+++ b/views/includes/homepage_sections/whatWeDo.ejs
@@ -1,6 +1,6 @@
 <div class="whatWeDo">
     <div class="container big">
-        <h3 class="center-align">WHAT WE DO</h3>
+        <h3 class="center-align typicalTitle">What We Do</h3>
         <div class="row">
             <%- include('../minis/whatWeDoCard', {
                 title: "Development",
