--- a/views/includes/joinus_sections/howToJoin.ejs
+++ b/views/includes/joinus_sections/howToJoin.ejs
@@ -1,5 +1,5 @@
-<div class="container">
-    <h3>How to Join?</h3>
+<div class="container joinUsInfo">
+    <h3 class="bold">How to Join?</h3>
     <hr>
     <p class="info">
         The GDP is open to all U7 and U8 Players/Teams! Whether you are a Club with 10 Teams seeking a diverse
