--- a/views/includes/joinus_sections/included.ejs
+++ b/views/includes/joinus_sections/included.ejs
@@ -1,5 +1,5 @@
-<div class="container">
-    <h3>What's Included?</h3>
+<div class="container joinUsInfo">
+    <h3 class="bold">What's Included?</h3>
     <hr>
     <ul class="info">
         <li>7 Event Schedule, Including Fields and Referees</li>
