--- a/views/includes/joinus_sections/types.ejs
+++ b/views/includes/joinus_sections/types.ejs
@@ -1,7 +1,7 @@
 <div class="types">
-    <div class="container big">
+    <div class="container">
         <table class="typesTable" style="table-layout: fixed;"> 
-            <tr>
+            <tr class="headers">
                 <td class="grey lighten-1">Club</td>
                 <td class="grey lighten-1">Town/Rec Group</td>
                 <td class="grey lighten-1">Team</td>
@@ -25,7 +25,7 @@
                     <img src="/images/icons/referee.png">
                 </td>
             </tr>
-            <tr>
+            <tr class="descriptions">
                 <td class="grey lighten-4">
                     <p>Add value and diversity to all your U7 and U8 programming!</p>
                 </td>
