--- a/views/includes/leagues_sections/info.ejs
+++ b/views/includes/leagues_sections/info.ejs
@@ -2,11 +2,11 @@
     <div class="container">
         <table>
             <tr>
-                <td class="red lighten-2">
+                <td class="tapinRed">
                     <p class="bold">Format</p>
                     <i class="material-icons">file_download</i>
                 </td>
-                <td class="red lighten-4">
+                <td class="tapinRed lighter">
                     <ul>
                         <li>U7 AND U8 PLAYERS</li>
                         <li>7 GAME SEASON</li>
@@ -16,11 +16,11 @@
                 </td>
             </tr>
             <tr>
-                <td class="yellow lighten-2">
+                <td class="tapinYellow">
                     <p class="bold">Rules</p>  
                     <i class="material-icons">file_download</i>
                 </td>
-                <td class="yellow lighten-4">
+                <td class="tapinYellow lighter">
                     <ul>
                         <li>4X4, NO GK'S</li>
                         <li>25X35 YDS FIELD, 3X5FT GOALS</li>
@@ -30,11 +30,11 @@
                 </td>
             </tr>
             <tr>
-                <td class="blue lighten-2">
+                <td class="tapinBlue">
                     <p class="bold">Reccomendations</p>
                     <i class="material-icons">file_download</i>
                 </td>
-                <td class="blue lighten-4">
+                <td class="tapinBlue lighter">
                     <ul>
                         <li>LIMIT SUBS</li>
                         <li>BALANCE PLAYING TIME</li>
