--- a/views/includes/leagues_sections/stickers.ejs
+++ b/views/includes/leagues_sections/stickers.ejs
@@ -1,16 +1,14 @@
 <div class="stickers">
     <div class="container">
-        <h5 class="green-text text-darken-1" style="font-weight: bold;">Stickers</h5>
+        <h4 class="bold">Stickers</h4>
         <table style="table-layout: fixed;">
             <tr>
-                <td class="orange">MVP</td>
                 <td class="red">Hardest Worker</td>
                 <td class="grey">Best Student</td>
                 <td class="green">Best Sportsman</td>
                 <td class="blue">Great Play</td>
             </tr>
             <tr>
-                <td><img class="sticker" src="/images/stickers/star.png"></td>
                 <td><img class="sticker" src="/images/stickers/heart.png"></td>
                 <td><img class="sticker" src="/images/stickers/gear.png"></td>
                 <td><img class="sticker" src="/images/stickers/handshake.png"></td>
@@ -18,34 +16,8 @@
             </tr>
         </table>
         <div class="row">
-            <div class="col s6 image">
-                <img src="/images/player_cards/playercard1.png" style="height: 400px;">
-            </div>
-            <div class="col s6">
-                <table class="vertical">
-                    <tr>
-                        <td class="orange">MVP</td>
-                        <td>
-                            <img class="sticker" src="/images/stickers/star.png">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="red">Hardest Worker</td>
-                        <td><img class="sticker" src="/images/stickers/heart.png"></td>
-                    </tr>
-                    <tr>
-                        <td class="grey">Best Student</td>
-                        <td><img class="sticker" src="/images/stickers/gear.png"></td>
-                    </tr>
-                    <tr>
-                        <td class="green">Best Sportsman</td>
-                        <td><img class="sticker" src="/images/stickers/handshake.png"></td>
-                    </tr>
-                    <tr>
-                        <td class="blue">Great Play</td>
-                        <td><img class="sticker" src="/images/stickers/clap.png"></td>
-                    </tr>
-                </table>
+            <div class="image">
+                <img src="/images/player_cards/playercard3.png" style="height: 400px;">
             </div>
         </div>
     </div>
