--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,8 +1,8 @@
 /* VARIABLES */
 
 :root {
-    --primary-green: #2C6919;
-    --primary-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --primary-green: #008738;
+    --header-font: 'Roboto', sans-serif
 }
 
 /*************/
@@ -18,10 +18,45 @@
     padding: 50px;
 }
 
+.typicalTitle {
+    font-family: var(--header-font);
+    font-weight: bolder;
+    color: #333;
+}
+
+.tapinRed {
+    background-color: #ff7771;
+}
+
+.tapinYellow {
+    background-color: #ffdd69
+}
+
+.tapinBlue {
+    background-color: #64b2ff;
+}
+
+.tapinRed.lighter {
+    background-color: rgba(255, 95, 88, 0.5);
+}
+
+.tapinYellow.lighter {
+    background-color:rgba(243,202,62,.5);
+}
+
+.tapinBlue.lighter {
+    background-color: rgba(51,153,255,.5);
+}
+
+.primaryGreen {
+    color: var(--primary-green);
+}
+
 /*********************/
 
 body {
-    font-family: var(--primary-font);
+    font-family: var(--header-font);
+    font-weight: 400;
 }
 
 html, body {
@@ -69,6 +104,27 @@ nav .nav-wrapper ul a.no-hover:hover {
     height: 500px;
     background-size: cover;
     background-position: center;
+}
+
+.fullImage p {
+    font-style: italic;
+    font-weight: 700;
+    font-size: 2.25rem;
+}
+
+.fullImage .btn-large {
+    background: linear-gradient( rgba(55, 172, 0, 1), rgba(14, 55, 0, 1) );
+    border-radius: 10px;
+    height: 45px;
+    font-style: italic;
+    line-height: 45px;
+    text-transform: none;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.fullImage .btn-large:hover {
+    background-color: #008738;
 }
 
 .fullImageAboutUs {
@@ -129,6 +185,22 @@ nav .nav-wrapper ul a.no-hover:hover {
 
 .fullImage .container a {
     width: 10rem;
+}
+
+.whatWeDo, .ourProgram, .news {
+    padding-top: 50px;
+}
+
+.news .row {
+    margin: 0;
+}
+
+.news {
+    padding-bottom: 75px;
+}
+
+.ourLeagues {
+    margin-top: 75px;
 }
 
 .whatWeDo .card {
@@ -213,6 +285,10 @@ nav .nav-wrapper ul a.no-hover:hover {
     height: 150px;
 }
 
+.partners .row .btn {
+    background-color: var(--primary-green);
+}
+
 .partner-container {
     display: flex;
     align-items: center;
@@ -237,6 +313,11 @@ nav .nav-wrapper ul a.no-hover:hover {
     margin-top: 10px;
 }
 
+.contactUs {
+    background-color: var(--primary-green);
+    padding-bottom: 75px;
+}
+
 .contactUs .container {
     max-height: 200px;
 }
@@ -249,6 +330,7 @@ nav .nav-wrapper ul a.no-hover:hover {
 
 .contactUs .row {
     margin: 0;
+    padding-top: 50px;
 }
 
 .contactUs .col.mail {
@@ -309,7 +391,7 @@ table td{
 }
 
 ul.indicators {
-    background-color: green;
+    background-color: var(--primary-green);
 }
 
 .authorPic {
@@ -360,6 +442,7 @@ div.testimonial {
 div.mapContainer {
     display: flex;
     justify-content: space-around;
+    padding-bottom: 100px;
 }
 
 .legend ul li {
@@ -399,6 +482,16 @@ div.mapContainer {
 
 .types .typesTable td {
     border: 1px solid lightgrey;
+    font-family: var(--header-font);
+    font-weight: 300;
+}
+
+.types .typesTable tr.descriptions {
+    font-style: italic;
+}
+
+.types .typesTable tr.headers td {
+    font-weight: 500;
 }
 
 .playerCards .image img{
@@ -414,15 +507,15 @@ div.mapContainer {
 }
 
 .news .row a:nth-child(1) .news-card {
-    background: linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6) ), url('/images/news/news1.png') no-repeat center/cover;
+    background: linear-gradient( rgba(255, 255, 255, .3), rgba(0, 0, 0, 0.7) ), url('/images/news/news1.png') no-repeat center/cover;
 }
 
 .news .row a:nth-child(2) .news-card {
-    background: linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6) ), url('/images/news/news2.png') no-repeat center/cover;
+    background: linear-gradient( rgba(255, 255, 255, .3), rgba(0, 0, 0, 0.7) ), url('/images/news/news2.png') no-repeat center/cover;
 }
 
 .news .row a:nth-child(3) .news-card {
-    background: linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6) ), url('/images/news/news3.png') no-repeat center/cover;
+    background: linear-gradient( rgba(255, 255, 255, .3), rgba(0, 0, 0, 0.7) ), url('/images/news/news3.png') no-repeat center/cover;
 }
 
 .news-card {
@@ -434,7 +527,7 @@ div.mapContainer {
     cursor: pointer;
     display: flex;
     align-items: flex-end;
-    padding: 5px;
+    padding: 15px 15px;
     margin-top: 50px;
 }
 
@@ -522,6 +615,51 @@ div.mapContainer {
     margin-bottom: 50px;
 }
 
+.joinUsInfo h3 {
+    font-size: 28px;
+    font-weight: bolder;
+    font-family: 'Roboto';
+}
+
+.container.joinUsInfo {
+    width: 60%;
+}
+
+.joinUsInfo form.col {
+    padding: 0;
+}
+
+.info table {
+    box-shadow: 2px 2px 5px #8c8c8c;
+}
+
+.info table td {
+    text-align: left;
+    padding: 20px 50px;
+}
+
+.info table p.bold {
+    font-size: 24px;
+    font-family: var(--header-font);
+}
+
+.stickers table {
+    margin-top: 50px;
+}
+
+.stickers table td {
+    border: 1px solid #ccc;
+    border-radius: 0;
+}
+
+.stickers h4 {
+    color: #333;
+}
+
+.stickers .row .image {
+    text-align: center;
+}
+
 @media only screen and (max-width: 600px) {
     nav {
       margin-top: 0;
@@ -576,4 +714,10 @@ div.mapContainer {
         display: table;
     }
 
+}
+
+@media only screen and (max-width: 1000px) {
+    .joinUsInfo.container {
+        width: 80%;
+    }
 }
