--- a/views/includes/general/head.ejs
+++ b/views/includes/general/head.ejs
@@ -7,5 +7,6 @@
     <link rel="icon" href="/images/logo-draft.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
     <title>GDL Website</title>
 </head>
