--- a/views/includes/homepage_sections/contactUs.ejs
+++ b/views/includes/homepage_sections/contactUs.ejs
@@ -1,6 +1,6 @@
-<div class="contactUs green lighten-1">
+<div class="contactUs">
     <div class="container">
-        <h4 class="center-align white-text" style="margin: 0;">Contact Us</h4>
+        <h4 class="center-align white-text typicalTitle" style="margin: 0;">Contact Us</h4>
         <div class="row">
             <div class="col m6 mail">
                 <img class="social-icon" src="/images/social/email.png">
