--- a/views/includes/joinus_sections/contactForm.ejs
+++ b/views/includes/joinus_sections/contactForm.ejs
@@ -1,5 +1,6 @@
-<div class="container">
+<div class="container joinUsInfo">
     <h3>Contact Form</h3>
+    <hr>
     <div class="row">
         <form class="col s12" action="https://formspree.io/xoqklebg" method="POST">
           <div class="row">
