--- a/views/includes/joinus_sections/cost.ejs
+++ b/views/includes/joinus_sections/cost.ejs
@@ -1,5 +1,5 @@
-<div class="container">
-    <h3>What's the Cost?</h3>
+<div class="container joinUsInfo">
+    <h3 class="bold">What's the Cost?</h3>
     <hr>
     <p class="info">
         $170 Per Player, Per Seasono 
