initial api branch commit

--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -4,6 +4,7 @@
             <div class="first">
                 <li><a href="/leagues">Leagues</a></li>
                 <li><a href="/franchise">Franchise</a></li>
+                <li><a href="/api">API</a></li>
             </div>
             <a href="/" class="no-hover"><img class="logo" src="/images/leagues/logo-draft.png"></a>
             <div class="second">
