--- a/views/api.ejs
+++ b/views/api.ejs
@@ -8,10 +8,16 @@
     <!-- Navigation -->
     <%- include('includes/general/navbar'); %>
     
+     <!-- Navigation -->
+     <%- include('includes/api_sections/results'); %>
+
     <!-- Contact Us -->
     <%- include('includes/homepage_sections/contactUs'); %>
 
     <!-- jquery functions for materialize -->
+    <%- include('includes/homepage_sections/jquery'); %>
+
+    <!-- jquery functions for api -->
     <%- include('includes/api_sections/jquery'); %>
 
 </body>
