--- a/views/includes/homepage_sections/jquery.ejs
+++ b/views/includes/homepage_sections/jquery.ejs
@@ -7,5 +7,6 @@
             fullWidth: true
         });
         $('.scrollspy').scrollSpy();
+        $('select').formSelect();
     });
 </script>
