--- a/views/includes/api_sections/jquery.ejs
+++ b/views/includes/api_sections/jquery.ejs
@@ -1,7 +1,8 @@
 <script>
-    $(document).ready(function(){
+    function apiCall(birthYear, gender, sponsored) {
+        let canBeSponsored = (sponsored === "true");
 
-        fetch("https://stage.api.tapinmobilesolutions.com/v2/api/public/graphql", {
+        fetch("https://api.tapinmobilesolutions.com/v2/api/public/graphql", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json",
@@ -9,19 +10,21 @@
             },
             body: JSON.stringify({
                 query: `
-                    query {
-                        publicTeams(input: {
+                    query getTeams($gender:Gender, $birthYear:Int, $canBeSponsored:Boolean){
+                        publicTeams(
+                            input: {
                             skip: 0
-                            take: 50
-                            gender: MALE
-                            birthYear: 2002
+                            take: 20
+                            gender:$gender
+                            birthYear: $birthYear
                             locationId: "5d51298538c43935d0bb66f8"
-                            canBeSponsored: true
-                        }) {
+                            canBeSponsored: $canBeSponsored
+                            }
+                        ) {
                             name,
                             birthYear,
                             gender,
-                            location {
+                            location { 
                                 name,
                                 parent {
                                     name
@@ -29,27 +32,47 @@
                             },
                             canBeSponsored
                         }
-                    }
-                `
+                    }`,
+                variables: {
+                    "birthYear": parseInt(birthYear),
+                    "gender": gender,
+                    "canBeSponsored": canBeSponsored 
+                }
             })
         }).then(res => res.json()).then(
-            (data) => {
-                console.log(data.data.publicTeams);
-                data.data.publicTeams.forEach((team) => {
-                    console.log(team);
-                    $('.results .result table').append(`
-                        <tr>
-                            <td>` + team.name + `</td>
-                            <td class="hide-on-med-and-down">` + team.birthYear + `</td>
-                            <td class="hide-on-med-and-down">` + team.gender + `</td>
-                            <td class="hide-on-med-and-down">` + team.location.parent.name + `</td>
-                            <td class="hide-on-med-and-down">` + team.location.name + `</td>
-                            <td>` + team.canBeSponsored + `</td>
-                        </tr>
-                    `);
-                });
-            }
-        );
+                    (data) => {
+                        console.log(data);
+                        data.data.publicTeams.forEach((team) => {
+                            $('.results .result table').append(`
+                                <tr>
+                                    <td>` + team.name + `</td>
+                                    <td class="hide-on-med-and-down">` + team.birthYear + `</td>
+                                    <td class="hide-on-med-and-down">` + team.gender + `</td>
+                                    <td class="hide-on-med-and-down">` + team.location.parent.name + `</td>
+                                    <td class="hide-on-med-and-down">` + team.location.name + `</td>
+                                    <td>` + team.canBeSponsored + `</td>
+                                </tr>
+                            `);
+                        });
+                    }
+                );
+    }
 
+    apiCall("2002", "MALE", "true");
+
+    $(document).ready(function(){
+        $('.filter-button').on('click', function() {
+            let gender = $('#gender').val();
+            let birthYear = $('#birthYear').val();
+            let sponsored = $('#sponsored').val();
+
+            if(gender === null || birthYear === null || sponsored === null) {
+                $('.msg').show();
+            } else {
+                $('.msg').hide();
+                $('.results table tr:not(:first)').remove();
+                apiCall(birthYear, gender, sponsored);
+            }
+        });
     });
 </script>
