--- a/views/includes/minis/testimonial.ejs
+++ b/views/includes/minis/testimonial.ejs
@@ -1,4 +1,18 @@
-<div class="imageContainer">
+<div class="col l4 m12">
+    <div class="testimonial-card white z-depth-3" id="<%= img %>">
+        <img class="pic" src="/images/Headshots/<%= img %>.png">
+        <p class="name bold"><%= name %></p>
+        <p class="title"><%= title %></p>
+        <p class="content grey-text text-darken-1"><%- include('../content/testimonials/' + img); %></p>
+        <div class="stars">
+            <img class="stars" src="/images/icons/5stars.png" alt="">
+        </div>
+    </div>
+</div>
+
+
+
+<!-- <div class="imageContainer">
     <div class="image <%= img %>"></div>
 </div>
 <div class="testimonial">
@@ -6,4 +20,4 @@
     <p class="title green-text text-darken-2"><%= title %></p>
     <p class="content grey-text text-darken-2"><%- include('../content/testimonials/' + img); %></p>
     <div class="stars"></div>
-</div>
+</div> -->
