--- a/views/includes/minis/testimonial.ejs
+++ b/views/includes/minis/testimonial.ejs
@@ -1,6 +1,6 @@
 <div class="col l4 m12">
     <div class="testimonial-card white z-depth-3" id="<%= img %>">
-        <img class="pic" src="/images/Headshots/<%= img %>.png">
+        <img class="pic" src="/images/Headshots/<%= img %>.png" id="<%= img %>">
         <p class="name bold"><%= name %></p>
         <p class="title"><%= title %></p>
         <p class="content grey-text text-darken-1"><%- include('../content/testimonials/' + img); %></p>
