new league logos

--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="league col s12 m6 l3">
                 <img class="leaguesLogo" src="/images/leagues/logo-draft.png">
-                <h5 class="bold">GDL MA</h5>
+                <h5 class="green-text bold">GDL MA</h5>
             </div>
             <div class="league col s12 m6 l3">
                 <img class="leaguesLogo" src="/images/leagues/red.png">
@@ -16,7 +16,7 @@
             </div>
             <div class="league col s12 m6 l3">
                 <img class="leaguesLogo" src="/images/leagues/purple.png">
-                <h5 class="purple-text bold">GDL ME</h5>
+                <h5 class="blue-text bold">GDL ME</h5>
             </div>
         </div>
     </div>
