--- a/views/includes/homepage_sections/ourProgram.ejs
+++ b/views/includes/homepage_sections/ourProgram.ejs
@@ -12,54 +12,32 @@
             <%- include('../minis/ourProgramCard', {
                 title: "Player Centric",
                 image: "soccerguy",
-                bullets: [
-                    "Fun, Safe, and Engaging",
-                    "Interactive",
-                    "No Standings"
-                ]
+                info: "Fun, Engaging, Safe, and Educational"
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Developement Focused",
                 image: "computerguy",
-                bullets: [
-                    "Nationally recognized soccer leaders",
-                    "Small sided games",
-                    "Controlled environment"
-                ]
+                info: "Built by Experienced Soccer Leaders/Educators"
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Revolutionary Technology",
                 image: "cellphone",
-                bullets: [
-                    "User focused",
-                    "Targeted developement focussed tools",
-                    "Education and certification"
-                ]
+                info: "Customized, Targeted, Development Focused Tools"
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Open to All",
                 image: "diversity",
-                bullets: [
-                    "User focused",
-                    "Targeted developement focussed tools",
-                    "Education and certification"
-                ]
+                info: "Inclusive and Diverse"
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Full Administration Platform",
                 image: "circlePeople",
-                bullets: [
-                    "Player registration, team management",
-                    "Scheduling facilities, referees reporting",
-                    "Reporting and feedback training"
-                ]
+                info: "End to End League and Program Management"
             }); %>
             <%- include('../minis/ourProgramCard', {
                 title: "Social Good",
                 image: "social",
-                bullets: [
-                    "Influencing positive social change"
-                ]
+                info: "Influencing Positive Social Change"
             }); %>
         </div>
 
